feat(product-gallery): add GalleryA component and update global styles

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,6 @@ body {
 .overlayEdit--visible {
   @apply visible opacity-100;
 }
+.swiper-slide-thumb-active .thumb {
+  @apply border-hotPink;
+}
